# create-context-graph-local

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  initial_report.md  pyproject.toml
.github/workflows/: ci.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md  quick-start.md
docs/docs/explanation/: why-context-graphs.md
docs/docs/how-to/: switch-agent-frameworks.md  use-docker.md  use-neo4j-aura.md  use-neo4j-local.md
docs/docs/reference/: cli-options.md  domain-catalog.md  framework-comparison.md  generated-project-structure.md
docs/src/components/: AnimatedGraphBanner.tsx  TerminalCommand.tsx
docs/src/components/animations/: AppPreview.module.css  AppPreview.tsx  ContextGraphExplainer.module.css  ContextGraphExplainer.tsx  DomainCarousel.module.css  DomainCarousel.tsx  FrameworkGrid.module.css  FrameworkGrid.tsx  HowItWorks.module.css  HowItWorks.tsx  TerminalAnimation.module.css  TerminalAnimation.tsx  (+2 more)
docs/src/css/: custom.css
docs/src/data/: animation-config.ts
docs/src/pages/: index.module.css  index.tsx
npm-wrapper/: package.json
scripts/: e2e_smoke_test.py
src/create_context_graph/: __init__.py  cli.py  config.py  custom_domain.py  generator.py  ingest.py  name_pools.py  ontology.py  renderer.py  wizard.py
src/create_context_graph/domains/: agent-memory.yaml  conservation.yaml  data-journalism.yaml  digital-twin.yaml  financial-services.yaml  gaming.yaml  genai-llm-ops.yaml  gis-cartography.yaml  golf-sports.yaml  healthcare.yaml  hospitality.yaml  manufacturing.yaml  oil-gas.yaml  personal-knowledge.yaml  product-management.yaml  real-estate.yaml  retail-ecommerce.yaml  scientific-research.yaml  software-engineering.yaml  trip-planning.yaml  vacation-industry.yaml  wildlife-management.yaml
src/create_context_graph/fixtures/: digital-twin.json
tests/: test_cli.py  test_config.py  test_fixtures.py  test_generated_project.py  test_generator.py  test_ontology.py
(+38 files in other folders)
